--- a/Partner/Html/Partner.html
+++ b/Partner/Html/Partner.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
+    <link rel="stylesheet" href="../CSS/Partner.css">
+    <script type="text/javascript" src="../JS/Partner.js"></script>
     <title>合伙人</title>
 </head>
 <body>
@@ -40,7 +42,28 @@
         <!--content-->
         <div id="content">
             <img src="../Images/partnerHeader.png" style="width: 100%">
-            <img src="../Images/partnerBody.png" style="width: 100%">
+            <div id="getInfo" >
+                <img src="../Images/partnerBody.png" style="width: 100%">
+                <ul id="inputUL">
+                    <li>
+                        <label>姓名</label>
+                        <input placeholder="请输入姓名" id="name">
+                    </li>
+                    <li>
+                        <label>手机</label>
+                        <input placeholder="请输入手机" id="phone">
+                    </li>
+                    <li>
+                        <label>代理地区</label>
+                        <input placeholder="请输入代理地区" id="area">
+                    </li>
+                    <li>
+                        <button id="commite">提交申请</button>
+                    </li>
+                </ul>
+
+            </div>
+
         </div>
     </div>
 </body>
