--- a/Partner/Html/Partner.html
+++ b/Partner/Html/Partner.html
@@ -24,7 +24,7 @@
                         <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
                     </li>
                     <li>
-                        <a href="../../Partner/Html/Partner.html">成为合伙人</a>
+                        <a href="../../Partner/Html/Partner.html"  style="color: darkred">成为合伙人</a>
                     </li>
                     <li>
                         <a href="../../About/Html/About.html">公司简介</a>
