--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -25,7 +25,7 @@
                         <a href="../../Partner/Html/Partner.html">成为合伙人</a>
                     </li>
                     <li>
-                        <a href="../../About/Html/About.html">公司简介</a>
+                        <a href="../../About/Html/About.html"  style="color: darkred">公司简介</a>
                     </li>
                     <li>
                         <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
