--- a/BusinessEnter/Html/BusinessEnter.html
+++ b/BusinessEnter/Html/BusinessEnter.html
@@ -28,7 +28,7 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html"  style="color: darkred">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
@@ -38,8 +38,8 @@
         </div>
         <!--content-->
         <div id="content">
-            <img src="../Images/enterBody.png" style="width: 100%">
             <img src="../Images/enterHeader.png" style="width: 100%">
+            <img src="../Images/enterBody.png" style="width: 100%">
         </div>
     </div>
 </body>
