--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -19,7 +19,7 @@
             <div id="kind">
                 <ul id="kindUL">
                     <li>
-                        <a href="../../HomePage/Html/HomePage.html">首页</a>
+                        <a href="../../HomePage/Html/HomePage.html"  style="color: darkred">首页</a>
                     </li>
                     <li>
                         <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
@@ -31,7 +31,7 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
