--- a/TMConcept/Html/TMConcept.html
+++ b/TMConcept/Html/TMConcept.html
@@ -19,7 +19,7 @@
                         <a href="../../HomePage/Html/HomePage.html">首页</a>
                     </li>
                     <li>
-                        <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
+                        <a href="../../TMConcept/Html/TMConcept.html" style="color: darkred">土冒理念</a>
                     </li>
                     <li>
                         <a href="../../Partner/Html/Partner.html">成为合伙人</a>
@@ -28,7 +28,7 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
