add navigator item location
add navigator item location

--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
+    <script src="../JS/About.js"></script>
     <title>公司简介</title>
 </head>
 <body>
+    <!--用于定位-->
+    <a class="hideA" href="#selected"></a>
     <div style="width: 100%">
         <!--navigator-->
         <div class="navigator">
@@ -28,7 +31,7 @@
                         <a href="../../About/Html/About.html"  style="color: #B41800">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a name="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
