--- a/BusinessEnter/Html/BusinessEnter.html
+++ b/BusinessEnter/Html/BusinessEnter.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
+    <script src="../JS/BusinessEnter.js"></script>
     <title>商家入驻</title>
 </head>
 <body>
+    <!--用于定位-->
+    <a class="hideA" href="#selected"></a>
     <div style="width: 100%">
         <!--navigator-->
         <div class="navigator">
@@ -28,10 +31,10 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html"  style="color: #B41800">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html"  style="color: #B41800">商家入驻</a>
                     </li>
                     <li>
-                        <a href="../../News/Html/News.html">资讯平台</a>
+                        <a name="selected" href="../../News/Html/News.html">资讯平台</a>
                     </li>
                 </ul>
             </div>
@@ -42,5 +45,8 @@
             <img src="../Images/enterHeader.png" style="width: 100%">
         </div>
     </div>
+
+
 </body>
+
 </html>
