--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -10,35 +10,60 @@
     <title>首页</title>
 </head>
 <body>
-    <div style="width: 100%">
-        <!--navigator-->
-        <div class="navigator">
-            <div id="logo">
-                <img src="../../Images/GlobalImages/logo.png">
+    <!--navigator-->
+    <div class="navigator">
+        <div id="logo">
+            <img src="../../Images/GlobalImages/logo.png">
+        </div>
+        <div id="kind">
+            <ul id="kindUL">
+                <li>
+                    <a id="selected" href="../../HomePage/Html/HomePage.html" style="color: #B41800">首页</a>
+                </li>
+                <li>
+                    <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
+                </li>
+                <li>
+                    <a href="../../Partner/Html/Partner.html">成为合伙人</a>
+                </li>
+                <li>
+                    <a href="../../About/Html/About.html">公司简介</a>
+                </li>
+                <li>
+                    <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                </li>
+                <li>
+                    <a href="../../News/Html/News.html">资讯平台</a>
+                </li>
+            </ul>
+        </div>
+
+
+    </div>
+
+    <!--content-->
+    <div id="warp">
+        <div id="scrollBoby">
+            <div class="item" id="home">
             </div>
-            <div id="kind">
-                <ul id="kindUL">
-                    <li>
-                        <a id="selected" href="../../HomePage/Html/HomePage.html" style="color: #B41800">首页</a>
-                    </li>
-                    <li>
-                        <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
-                    </li>
-                    <li>
-                        <a href="../../Partner/Html/Partner.html">成为合伙人</a>
-                    </li>
-                    <li>
-                        <a href="../../About/Html/About.html">公司简介</a>
-                    </li>
-                    <li>
-                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
-                    </li>
-                    <li>
-                        <a href="../../News/Html/News.html">资讯平台</a>
-                    </li>
-                </ul>
+            <div class="item" id="concept">
+
             </div>
+            <div class="item" id="partner">
+
+            </div>
+            <div class="item" id="about">
+
+            </div>
+            <div class="item" id="enter">
+
+            </div>
+            <div class="item" id="news">
+
+            </div>
+
         </div>
     </div>
+
 </body>
 </html>
