add home page scroll

--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -37,30 +37,18 @@
                 </li>
             </ul>
         </div>
-
-
     </div>
 
     <!--content-->
     <div id="warp">
         <div id="scrollBoby">
-            <div class="item" id="home">
-            </div>
-            <div class="item" id="concept">
 
-            </div>
-            <div class="item" id="partner">
-
-            </div>
-            <div class="item" id="about">
-
-            </div>
-            <div class="item" id="enter">
-
-            </div>
-            <div class="item" id="news">
-
-            </div>
+            <div class="item" id="home"></div>
+            <div class="item" id="concept"></div>
+            <div class="item" id="partner"></div>
+            <div class="item" id="about"></div>
+            <div class="item" id="enter"></div>
+            <div class="item" id="news"></div>
 
         </div>
     </div>
