--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -10,6 +10,9 @@
     <title>首页</title>
 </head>
 <body>
+
+    <!--用于定位-->
+    <a class="hideA" href="#about"></a>
     <!--navigator-->
     <div class="navigator">
         <div id="logo">
@@ -18,7 +21,7 @@
         <div id="kind">
             <ul id="kindUL">
                 <li>
-                    <a id="selected" href="../../HomePage/Html/HomePage.html" style="color: #B41800">首页</a>
+                    <a id="selected" href="../../HomePage/Html/HomePage.html">首页</a>
                 </li>
                 <li>
                     <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
@@ -30,7 +33,7 @@
                     <a href="../../About/Html/About.html">公司简介</a>
                 </li>
                 <li>
-                    <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                    <a href="../../BusinessEnter/Html/BusinessEnter.html" name="about">商家入驻</a>
                 </li>
                 <li>
                     <a href="../../News/Html/News.html">资讯平台</a>
@@ -43,12 +46,12 @@
     <div id="warp">
         <div id="scrollBoby">
 
-            <div class="item" id="home"></div>
-            <div class="item" id="concept"></div>
-            <div class="item" id="partner"></div>
-            <div class="item" id="about"></div>
-            <div class="item" id="enter"></div>
-            <div class="item" id="news"></div>
+            <div class="item" id="home">1</div>
+            <div class="item" id="concept">2</div>
+            <div class="item" id="partner">3</div>
+            <div class="item" id="about">4</div>
+            <div class="item" id="enter">5</div>
+            <div class="item" id="news">6</div>
 
         </div>
     </div>
