完成导航和内容 联动

--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -12,7 +12,7 @@
 <body>
 
     <!--用于定位-->
-    <a class="hideA" href="#about"></a>
+    <a id="hideA" href="#offset"></a>
     <!--navigator-->
     <div class="navigator">
         <div id="logo">
@@ -21,22 +21,28 @@
         <div id="kind">
             <ul id="kindUL">
                 <li>
-                    <a id="selected" href="../../HomePage/Html/HomePage.html">首页</a>
+                    <a name="header" id="selected" href="javascript:void(0)">首页</a>
+                    <!--href="../../HomePage/Html/HomePage.html"-->
                 </li>
                 <li>
-                    <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
+                    <a href="javascript:void(0)">土冒理念</a>
+                    <!--href="../../TMConcept/Html/TMConcept.html"-->
                 </li>
                 <li>
-                    <a href="../../Partner/Html/Partner.html">成为合伙人</a>
+                    <a href="javascript:void(0)">成为合伙人</a>
+                    <!--href="../../Partner/Html/Partner.html"-->
                 </li>
                 <li>
-                    <a href="../../About/Html/About.html">公司简介</a>
+                    <a href="javascript:void(0)">公司简介</a>
+                    <!--href="../../About/Html/About.html"-->
                 </li>
                 <li>
-                    <a href="../../BusinessEnter/Html/BusinessEnter.html" name="about">商家入驻</a>
+                    <a href="javascript:void(0)">商家入驻</a>
+                    <!--href="../../BusinessEnter/Html/BusinessEnter.html"-->
                 </li>
                 <li>
-                    <a href="../../News/Html/News.html">资讯平台</a>
+                    <a name="offset" href="javascript:void(0)">资讯平台</a>
+                    <!--href="../../News/Html/News.html"-->
                 </li>
             </ul>
         </div>
