--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -5,6 +5,9 @@
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <link rel="stylesheet" href="../CSS/HomePage.css">
+
+    <script src="../../Util/JS/NetWorkEngine.js"></script>
+    <script src="../../Util/JS/TimeFormatter.js"></script>
     <script src="../JS/HomePage.js"></script>
 
     <title>首页</title>
@@ -53,11 +56,84 @@
         <div id="scrollBoby">
 
             <div class="item" id="home">1</div>
-            <div class="item" id="concept">2</div>
-            <div class="item" id="partner">3</div>
-            <div class="item" id="about">4</div>
-            <div class="item" id="enter">5</div>
-            <div class="item" id="news">6</div>
+
+
+            <div class="item" id="concept">
+                <img src="../../Images/Concept/concept-1.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-2.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-3.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-4.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-5.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-6.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-7.png" style="width: 100%">
+                <img src="../../Images/Concept/concept-8.png" style="width: 100%">
+            </div>
+
+
+            <div class="item" id="partner">
+                <img src="../../Images/Partner/partner-1.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-2.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-3.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-4.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-5.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-6.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-7.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-8.png" style="width: 100%">
+                <img src="../../Images/Partner/partner-9.png" style="width: 100%">
+
+            </div>
+
+
+            <div class="item" id="about">
+                <img src="../../Images/About/about-1.png" style="width: 100%">
+                <img src="../../Images/About/about-2.png" style="width: 100%">
+                <img src="../../Images/About/about-3.png" style="width: 100%">
+                <img src="../../Images/About/about-4.png" style="width: 100%">
+                <img src="../../Images/About/about-5.png" style="width: 100%">
+                <img src="../../Images/About/about-6.png" style="width: 100%">
+                <img src="../../Images/About/about-7.png" style="width: 100%">
+            </div>
+
+
+            <div class="item" id="enter">
+                <img src="../../Images/BusinessEnter/businessEnter-1.png" style="width: 100%">
+                <img src="../../Images/BusinessEnter/businessEnter-2.png" style="width: 100%">
+                <img src="../../Images/BusinessEnter/businessEnter-3.png" style="width: 100%">
+                <img src="../../Images/BusinessEnter/businessEnter-4.png" style="width: 100%">
+            </div>
+
+
+            <div class="item" id="news">
+                <img src="../../Images/News/news-1.png" style="width: 100%">
+                <div id="top">
+                    <ul id="topUL">
+                        <li>
+                            <img class="topImage">
+                            <label class="name">name</label>
+                            <img class="time">
+                            <label class="timeLable">timeLable</label>
+                            <img class="person">
+                            <label class="personLabel">personLabel</label>
+                            <img class="source">
+                            <label class="sourceLabel">sourceLabel</label>
+                        </li>
+                    </ul>
+                </div>
+                <div id="list">
+                    <ul id="listUL">
+                        <li>
+                            <img class="topImage">
+                            <label class="name">name</label>
+                            <img class="time">
+                            <label class="timeLable">time</label>
+                            <img class="person">
+                            <label class="personLabel">person</label>
+                            <img class="source">
+                            <label class="sourceLabel">source</label>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
         </div>
     </div>
