complete homePage and partner input

--- a/HomePage/Html/HomePage.html
+++ b/HomePage/Html/HomePage.html
@@ -55,7 +55,12 @@
     <div id="warp">
         <div id="scrollBoby">
 
-            <div class="item" id="home">1</div>
+            <div class="item" id="home">
+                <img src="../../Images/Home/home-1.png" style="width: 100%">
+                <img src="../../Images/Home/home-2.png" style="width: 100%">
+                <img src="../../Images/Home/home-3.png" style="width: 100%">
+                <img src="../../Images/Home/home-4.png" style="width: 100%">
+            </div>
 
 
             <div class="item" id="concept">
@@ -80,6 +85,23 @@
                 <img src="../../Images/Partner/partner-7.png" style="width: 100%">
                 <img src="../../Images/Partner/partner-8.png" style="width: 100%">
                 <img src="../../Images/Partner/partner-9.png" style="width: 100%">
+                <ul id="inputUL">
+                    <li>
+                        <label>姓名</label>
+                        <input placeholder="请输入姓名" id="name">
+                    </li>
+                    <li>
+                        <label>手机</label>
+                        <input placeholder="请输入手机" id="phone">
+                    </li>
+                    <li>
+                        <label>代理地区</label>
+                        <input placeholder="请输入代理地区" id="area">
+                    </li>
+                    <li>
+                        <button id="commit">提交申请</button>
+                    </li>
+                </ul>
 
             </div>
 
