从新布局  把模块分开

--- a/BusinessEnter/Html/BusinessEnter.html
+++ b/BusinessEnter/Html/BusinessEnter.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--用于定位-->
-    <a class="hideA" href="#selected"></a>
+    <a class="hideA" href="#hiden"></a>
     <div style="width: 100%">
         <!--navigator-->
         <div class="navigator">
@@ -19,7 +19,7 @@
             <div id="kind">
                 <ul id="kindUL">
                     <li>
-                        <a href="../../HomePage/Html/HomePage.html">首页</a>
+                        <a href="../../HomePage/Html/FirstPage.html">首页</a>
                     </li>
                     <li>
                         <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
@@ -31,18 +31,20 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a href="../../BusinessEnter/Html/BusinessEnter.html"  style="color: #B41800">商家入驻</a>
+                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
-                        <a name="selected" href="../../News/Html/News.html">资讯平台</a>
+                        <a name="hiden" href="../../News/Html/News.html">资讯平台</a>
                     </li>
                 </ul>
             </div>
         </div>
         <!--content-->
         <div id="content">
-            <img src="../Images/enterBody.png" style="width: 100%">
-            <img src="../Images/enterHeader.png" style="width: 100%">
+            <img src="../../Images/BusinessEnter/businessEnter-1.png" style="width: 100%">
+            <img src="../../Images/BusinessEnter/businessEnter-2.png" style="width: 100%">
+            <img src="../../Images/BusinessEnter/businessEnter-3.png" style="width: 100%">
+            <img src="../../Images/BusinessEnter/businessEnter-4.png" style="width: 100%">
         </div>
     </div>
 
