--- a/Partner/Html/Partner.html
+++ b/Partner/Html/Partner.html
@@ -18,19 +18,19 @@
             <div id="kind">
                 <ul id="kindUL">
                     <li>
-                        <a href="../../HomePage/Html/HomePage.html">首页</a>
+                        <a href="../../HomePage/Html/FirstPage.html">首页</a>
                     </li>
                     <li>
                         <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
                     </li>
                     <li>
-                        <a href="../../Partner/Html/Partner.html" style="color: #B41800">成为合伙人</a>
+                        <a href="../../Partner/Html/Partner.html"id="selected">成为合伙人</a>
                     </li>
                     <li>
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
@@ -41,9 +41,16 @@
 
         <!--content-->
         <div id="content">
-            <img src="../Images/partnerHeader.png" style="width: 100%">
-            <div id="getInfo" >
-                <img src="../Images/partnerBody.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-1.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-2.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-3.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-4.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-5.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-6.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-7.png" style="width: 100%">
+            <img src="../../Images/Partner/partner-8.png" style="width: 100%">
+            <div id="inputDiv">
+                <img src="../../Images/Partner/partner-9.png" style="width: 100%">
                 <ul id="inputUL">
                     <li>
                         <label>姓名</label>
@@ -58,10 +65,9 @@
                         <input placeholder="请输入代理地区" id="area">
                     </li>
                     <li>
-                        <button id="commite">提交申请</button>
+                        <button id="commit">提交申请</button>
                     </li>
                 </ul>
-
             </div>
 
         </div>
