--- a/TMConcept/Html/TMConcept.html
+++ b/TMConcept/Html/TMConcept.html
@@ -16,10 +16,10 @@
             <div id="kind">
                 <ul id="kindUL">
                     <li>
-                        <a href="../../HomePage/Html/HomePage.html">首页</a>
+                        <a href="../../HomePage/Html/FirstPage.html">首页</a>
                     </li>
                     <li>
-                        <a href="../../TMConcept/Html/TMConcept.html"  style="color: #B41800">土冒理念</a>
+                        <a href="../../TMConcept/Html/TMConcept.html" id="selected">土冒理念</a>
                     </li>
                     <li>
                         <a href="../../Partner/Html/Partner.html">成为合伙人</a>
@@ -28,7 +28,7 @@
                         <a href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a id="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
                         <a href="../../News/Html/News.html">资讯平台</a>
@@ -38,9 +38,14 @@
         </div>
         <!--content-->
         <div id="content">
-            <img src="../Images/conceptHeader.png" style="width: 100%">
-
-            <img src="../Images/conceptBody.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-1.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-2.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-3.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-4.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-5.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-6.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-7.png" style="width: 100%">
+            <img src="../../Images/Concept/concept-8.png" style="width: 100%">
         </div>
     </div>
 </body>
