--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--用于定位-->
-    <a class="hideA" href="#selected"></a>
+    <a class="hideA" href="#hiden"></a>
     <div style="width: 100%">
         <!--navigator-->
         <div class="navigator">
@@ -19,7 +19,7 @@
             <div id="kind">
                 <ul id="kindUL">
                     <li>
-                        <a href="../../HomePage/Html/HomePage.html">首页</a>
+                        <a href="../../HomePage/Html/FirstPage.html">首页</a>
                     </li>
                     <li>
                         <a href="../../TMConcept/Html/TMConcept.html">土冒理念</a>
@@ -28,20 +28,26 @@
                         <a href="../../Partner/Html/Partner.html">成为合伙人</a>
                     </li>
                     <li>
-                        <a href="../../About/Html/About.html"  style="color: #B41800">公司简介</a>
+                        <a id="selected" href="../../About/Html/About.html">公司简介</a>
                     </li>
                     <li>
-                        <a name="selected" href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
+                        <a href="../../BusinessEnter/Html/BusinessEnter.html">商家入驻</a>
                     </li>
                     <li>
-                        <a href="../../News/Html/News.html">资讯平台</a>
+                        <a name="hiden" href="../../News/Html/News.html">资讯平台</a>
                     </li>
                 </ul>
             </div>
         </div>
         <!--content-->
         <div id="content">
-            <img src="../Images/about.png" style="width: 100%">
+            <img src="../../Images/About/about-1.png" style="width: 100%">
+            <img src="../../Images/About/about-2.png" style="width: 100%">
+            <img src="../../Images/About/about-3.png" style="width: 100%">
+            <img src="../../Images/About/about-4.png" style="width: 100%">
+            <img src="../../Images/About/about-5.png" style="width: 100%">
+            <img src="../../Images/About/about-6.png" style="width: 100%">
+            <img src="../../Images/About/about-7.png" style="width: 100%">
         </div>
     </div>
 </body>
