--- a/Partner/Html/Partner.html
+++ b/Partner/Html/Partner.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <link rel="stylesheet" href="../CSS/Partner.css">
     <script src="../../Util/JS/formJSON.js"></script>
+    <script src="../../Util/JS/lazyload.js"></script>
     <script type="text/javascript" src="../JS/Partner.js"></script>
     <title>合伙人</title>
 </head>
@@ -42,16 +43,16 @@
 
         <!--content-->
         <div id="content">
-            <img src="../../Images/Partner/partner-1.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-2.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-3.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-4.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-5.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-6.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-7.png" style="width: 100%">
-            <img src="../../Images/Partner/partner-8.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-1.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-2.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-3.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-4.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-5.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-6.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-7.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-8.png" style="width: 100%">
             <div id="inputDiv">
-                <img src="../../Images/Partner/partner-9.png" style="width: 100%">
+                <img class="lazy" data-src="../../Images/Partner/partner-9.png" style="width: 100%">
                 <ul id="inputUL">
                     <li>
                         <label>姓名</label>
