--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
+    <script src="../../Util/JS/lazyload.js"></script>
     <script src="../JS/About.js"></script>
     <title>公司简介</title>
 </head>
@@ -41,13 +42,13 @@
         </div>
         <!--content-->
         <div id="content">
-            <img src="../../Images/About/about-1.png" style="width: 100%">
-            <img src="../../Images/About/about-2.png" style="width: 100%">
-            <img src="../../Images/About/about-3.png" style="width: 100%">
-            <img src="../../Images/About/about-4.png" style="width: 100%">
-            <img src="../../Images/About/about-5.png" style="width: 100%">
-            <img src="../../Images/About/about-6.png" style="width: 100%">
-            <img src="../../Images/About/about-7.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-1.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-2.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-3.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-4.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-5.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-6.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/About/about-7.png" style="width: 100%">
         </div>
     </div>
     <script>
