--- a/BusinessEnter/Html/BusinessEnter.html
+++ b/BusinessEnter/Html/BusinessEnter.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <script src="../JS/BusinessEnter.js"></script>
+    <script src="../../Util/JS/lazyload.js"></script>
     <title>商家入驻</title>
 </head>
 <body>
@@ -41,10 +42,10 @@
         </div>
         <!--content-->
         <div id="content">
-            <img src="../../Images/BusinessEnter/businessEnter-1.png" style="width: 100%">
-            <img src="../../Images/BusinessEnter/businessEnter-2.png" style="width: 100%">
-            <img src="../../Images/BusinessEnter/businessEnter-3.png" style="width: 100%">
-            <img src="../../Images/BusinessEnter/businessEnter-4.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-1.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-2.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-3.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-4.png" style="width: 100%">
         </div>
     </div>
     <script>
