--- a/HomePage/Html/FirstPage.html
+++ b/HomePage/Html/FirstPage.html
@@ -8,7 +8,9 @@
 
     <script src="../../Util/JS/NetWorkEngine.js"></script>
     <script src="../../Util/JS/TimeFormatter.js"></script>
+    <script src="../../Util/JS/lazyload.js"></script>
     <script src="../JS/FirstPage.js"></script>
+
     <title>首页</title>
 </head>
 <body>
@@ -44,10 +46,10 @@
     </div>
     <!--content-->
     <div id="content">
-        <img src="../../Images/Home/home-1.png" style="width: 100%">
-        <img src="../../Images/Home/home-2.png" style="width: 100%">
-        <img src="../../Images/Home/home-3.png" style="width: 100%">
-        <img src="../../Images/Home/home-4.png" style="width: 100%">
+        <img class="lazy" data-src="../../Images/Home/home-1.png" style="width: 100%;">
+        <img class="lazy" data-src="../../Images/Home/home-2.png" style="width: 100%">
+        <img class="lazy" data-src="../../Images/Home/home-3.png" style="width: 100%">
+        <img class="lazy" data-src="../../Images/Home/home-4.png" style="width: 100%">
     </div>
 
     <script>
