--- a/TMConcept/Html/TMConcept.html
+++ b/TMConcept/Html/TMConcept.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
+    <script src="../../Util/JS/lazyload.js"></script>
     <title>土冒理念</title>
 </head>
 <body>
@@ -38,14 +39,14 @@
         </div>
         <!--content-->
         <div id="content">
-            <img src="../../Images/Concept/concept-1.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-2.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-3.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-4.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-5.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-6.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-7.png" style="width: 100%">
-            <img src="../../Images/Concept/concept-8.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-1.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-2.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-3.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-4.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-5.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-6.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-7.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Concept/concept-8.png" style="width: 100%">
         </div>
     </div>
 </body>
