修改导航条的适配问题

--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -58,6 +58,10 @@
                 console.log('I am ready');
             }
         });
+        var screenWidth = window.screen.availWidth;
+        var kindWidth = screenWidth - 70;
+        document.querySelector('#kind').style.width = kindWidth + 'px';
     </script>
+
 </body>
 </html>
