--- a/About/Html/About.html
+++ b/About/Html/About.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <script src="../../Util/JS/lazyload.js"></script>
     <script src="../JS/About.js"></script>
-    <title>公司简介</title>
+    <title>土冒</title>
 </head>
 <body>
     <!--用于定位-->
@@ -49,6 +49,7 @@
             <img class="lazy" data-src="../../Images/About/about-5.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/About/about-6.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/About/about-7.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/GlobalImages/webBottom.png" style="width: 100%;">
         </div>
     </div>
     <script>
