--- a/BusinessEnter/Html/BusinessEnter.html
+++ b/BusinessEnter/Html/BusinessEnter.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <script src="../JS/BusinessEnter.js"></script>
     <script src="../../Util/JS/lazyload.js"></script>
-    <title>商家入驻</title>
+    <title>土冒</title>
 </head>
 <body>
     <!--用于定位-->
@@ -46,6 +46,7 @@
             <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-2.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-3.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/BusinessEnter/businessEnter-4.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/GlobalImages/webBottom.png" style="width: 100%;">
         </div>
     </div>
     <script>
