--- a/Partner/Html/Partner.html
+++ b/Partner/Html/Partner.html
@@ -11,7 +11,7 @@
 
     <script type="text/javascript" src="../JS/Partner.js"></script>
 
-    <title>合伙人</title>
+    <title>土冒</title>
 </head>
 <body>
     <div style="width: 100%">
@@ -54,48 +54,24 @@
             <img class="lazy" data-src="../../Images/Partner/partner-6.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/Partner/partner-7.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/Partner/partner-8.png" style="width: 100%">
-            <div id="inputDiv">
-                <img class="lazy" data-src="../../Images/Partner/partner-9.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/Partner/partner-10.png" style="width: 100%">
 
+            <!--<div id="inputDiv">-->
+                <!--<img class="lazy" data-src="../../Images/Partner/partner-9.png" style="width: 100%">-->
+                <!--申请成为合伙人输入表-->
+                <!--<form action="https://dev-common.toomao.com/empty" data-role="formJSON" method="PUT" style="margin: 50px;" novalidate>-->
+                    <!--姓名<input type="text" name="name" placeholder="请输入姓名" data-role="formValidator" required>-->
+                    <!--<br>-->
+                    <!--手机<input type="text" name="phone" placeholder="请输入手机号" data-role="formValidator" minlength="11" required>-->
+                    <!--<br>-->
+                    <!--代理地区<input type="text" name="area" placeholder="请输入代理地区" data-role="formValidator" required>-->
+                    <!--<br>-->
+                    <!--<input type="submit" value="提交申请" class="submit">-->
+                <!--</form>-->
 
-                <!--<ul id="inputUL">-->
-                    <!--<li>-->
-                        <!--<label>姓名</label>-->
-                        <!--<input placeholder="请输入姓名" id="name">-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<label>手机</label>-->
-                        <!--<input placeholder="请输入手机" id="phone">-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<label>代理地区</label>-->
-                        <!--<input placeholder="请输入代理地区" id="area">-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<button id="commit">提交申请</button>-->
-                    <!--</li>-->
-                <!--</ul>-->
+            <!--</div>-->
 
-
-                <form action="https://dev-common.toomao.com/empty" data-role="formJSON" method="PUT" style="margin: 50px;" novalidate>
-                    姓名<input type="text" name="name" placeholder="请输入姓名" data-role="formValidator" required>
-                    <br>
-                    手机<input type="text" name="phone" placeholder="请输入手机号" data-role="formValidator" minlength="11" required>
-                    <br>
-                    代理地区<input type="text" name="area" placeholder="请输入代理地区" data-role="formValidator" required>
-                    <br>
-                    <input type="submit" value="提交申请" class="submit">
-                </form>
-
-            </div>
-
-
-            <script>
-
-
-
-
-            </script>
+            <img class="lazy" data-src="../../Images/GlobalImages/webBottom.png" style="width: 100%;">
         </div>
     </div>
     <style>
@@ -107,51 +83,39 @@
     </style>
     <script src='//common.toomao.com/js?p=formJSON,formValidator,lazyload,toast'></script>
     <script>
-//        document.addEventListener('invalid', function(e) {
-//            console.log(e);
-//            var input = e.target;
-//            var  name = input.name;
-//            var toastMsg = e._invalidationMessage;
-//            if (name == 'name'){
-//                toastMsg = '姓名不能为空';
-//            }else if (name == 'area'){
-//                toastMsg = '代理地区不能为空';
-//            }
-//            toast(toastMsg);
+        //输入信息判断
+//        document.querySelector('form').addEventListener('submit', function (e) {
+//            var inputs = document.querySelectorAll('[data-role=formValidator]');
+//            for (var i = 0; i < inputs.length; i ++){
+//                var input = inputs[i];
 //
+//                if (input.value.length == 0){
+//                    var toastMsg = '姓名不能为空';
+//                    if (i == 1){
+//                        toastMsg = '号码不能为空';
+//                    }else if (i == 2){
+//                        toastMsg = '代理地区不能为空';
+//                    }
+//                    toast(toastMsg);
+//                    return;
+//                }
+//                if (i == 1 && input.value.length != 11){
+//                    toast('号码错误');
+//                    return;
+//                }
+//
+//            }
 //        });
-        document.querySelector('form').addEventListener('submit', function (e) {
-            var inputs = document.querySelectorAll('[data-role=formValidator]');
-            for (var i = 0; i < inputs.length; i ++){
-                var input = inputs[i];
-
-                if (input.value.length == 0){
-                    var toastMsg = '姓名不能为空';
-                    if (i == 1){
-                        toastMsg = '号码不能为空';
-                    }else if (i == 2){
-                        toastMsg = '代理地区不能为空';
-                    }
-                    toast(toastMsg);
-                    return;
-                }
-                if (i == 1 && input.value.length != 11){
-                    toast('号码错误');
-                    return;
-                }
-
-            }
-        });
 
         document.body.onload = function () {
             //调整导航条位置
             var screenWidth = window.screen.availWidth;
             var kindWidth = screenWidth - 70;
             document.querySelector('#kind').style.width = kindWidth + 'px';
-
-            document.querySelector('form').onended = function (d) {
-                console.log(d)
-            }
+            //提交申请表信息
+//            document.querySelector('form').onended = function (d) {
+//                console.log(d)
+//            }
         }
     </script>
 </body>
