--- a/TMConcept/Html/TMConcept.html
+++ b/TMConcept/Html/TMConcept.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="../../Util/CSS/Global.css">
     <script src="../../Util/JS/lazyload.js"></script>
-    <title>土冒理念</title>
+    <title>土冒</title>
 </head>
 <body>
     <div style="width: 100%">
@@ -47,6 +47,7 @@
             <img class="lazy" data-src="../../Images/Concept/concept-6.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/Concept/concept-7.png" style="width: 100%">
             <img class="lazy" data-src="../../Images/Concept/concept-8.png" style="width: 100%">
+            <img class="lazy" data-src="../../Images/GlobalImages/webBottom.png" style="width: 100%;">
         </div>
     </div>
     <script>
