--- a/HomePage/Html/FirstPage.html
+++ b/HomePage/Html/FirstPage.html
@@ -11,7 +11,7 @@
     <script src="../../Util/JS/lazyload.js"></script>
     <script src="../JS/FirstPage.js"></script>
 
-    <title>首页</title>
+    <title>土冒</title>
 </head>
 <body>
     <!--用于定位-->
@@ -50,6 +50,7 @@
         <img class="lazy" data-src="../../Images/Home/home-2.png" style="width: 100%">
         <img class="lazy" data-src="../../Images/Home/home-3.png" style="width: 100%">
         <img class="lazy" data-src="../../Images/Home/home-4.png" style="width: 100%">
+        <img class="lazy" data-src="../../Images/GlobalImages/webBottom.png" style="width: 100%">
     </div>
 
     <script>
